add meta description

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>CRIDS - customizable grid system</title>
-        <meta name="description" content="">
+        <meta name="description" content="Powerfull and flexible, mobile first grid system for frontend developer.">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <link rel="stylesheet" href="css/crids.css">
@@ -22,7 +22,7 @@
                     CRIDS is fully customizable to get just the code you need and the classnames you want. Simply reduce file size and eliminate unneccesary CSS, it all results in your own small grid system. Have fun.
                 </p>
                 <div class="text-center">
-                    <a href="#" class="btn">view on github</a>
+                    <a href="https://github.com/andrefirchow/crids" class="btn">view on github</a>
                 </div>
             </div>
         </header>
