--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 
             <div class="wrapper">
                 <p>
-                    CRIDS is a responsive, mobile first, fluid, nestable, sass-based grid system for advanced usage.
+                    CRIDS is a responsive, mobile first, fluid, nestable, CSS (sass-based) grid system for advanced usage.
                     It comes with 12 columns by default and several grid options, which can be separately enabled inside the scss-file.
-                    CRIDS is fully customizable to get just the code you need and the classnames you want. Simply reduce file size and eliminate unneccesary CSS, it all results in your own small grid system. Have fun.
+                    CRIDS is fully customizable (SCSS file) to get just the code you need and the classnames you want. Simply reduce file size and eliminate unneccesary CSS, it all results in your own small grid system. Have fun.
                 </p>
                 <div class="text-center">
                     <a href="https://github.com/andrefirchow/crids" class="btn">view on github</a>
