--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <body class="demo">
 
         <header>
-            <h1>CRIDS <small><b>c</b>ustomizable g<b>rid</b> <b>s</b>ystem</small></h1>
+            <h1>CRIDS <small>customizable grid system</small></h1>
 
             <div class="wrapper">
                 <p>
