update to fix .center.collapse.X-uncollapse

--- a/index-debug.html
+++ b/index-debug.html
@@ -22,7 +22,7 @@
                     CRIDS is fully customizable (SCSS file) to get just the code you need and the classnames you want. Simply reduce file size and eliminate unneccesary CSS, it all results in your own small grid system. Have fun.
                 </p>
                 <div class="text-center">
-                    <a href="https://github.com/andrefirchow/crids" class="btn">view on github</a>
+                    <a href="https://github.com/andrefirchow/crids" class="btn">source on github</a>
                 </div>
             </div>
         </header>
@@ -159,6 +159,7 @@
                         <li><a href="test/test_center.html">center</a></li>
                         <li><a href="test/test_push-pull.html">push/pull</a></li>
                         <li><a href="test/test_collapse.html">collapse</a></li>
+                        <li><a href="test/test_center-collapse.html">center/collapse</a></li>
                         <li><a href="test/test_hide.html">hide</a></li>
                         <li><a href="test/test_layout.html">layout</a></li>
                     </ul>
