--- a/test/test_center-collapse.html
+++ b/test/test_center-collapse.html
@@ -18,8 +18,8 @@
         </div>
         <hr>
 
-        <h3>center</h3>
-        <div class="row center">
+        <h3>center collapse</h3>
+        <div class="row center collapse">
             <div class="col col-s-3"><div class="grid-example">col</div></div>
             <div class="col col-s-3"><div class="grid-example">col</div></div>
             <div class="col col-s-3"><div class="grid-example">col</div></div>
@@ -27,8 +27,8 @@
 
         <hr>
 
-        <h3>s-center</h3>
-        <div class="row s-center">
+        <h3>s-center collapse</h3>
+        <div class="row s-center collapse">
             <div class="col col-s-3 col-m-3"><div class="grid-example">col</div></div>
             <div class="col col-s-3 col-m-3"><div class="grid-example">col</div></div>
             <div class="col col-s-3 col-m-3"><div class="grid-example">col</div></div>
@@ -36,8 +36,8 @@
 
         <hr>
 
-        <h3>m-center</h3>
-        <div class="row m-center">
+        <h3>m-center collapse</h3>
+        <div class="row m-center collapse">
             <div class="col col-s-3 col-m-3 col-l-3"><div class="grid-example">col</div></div>
             <div class="col col-s-3 col-m-3 col-l-3"><div class="grid-example">col</div></div>
             <div class="col col-s-3 col-m-3 col-l-3"><div class="grid-example">col</div></div>
@@ -45,8 +45,8 @@
 
         <hr>
 
-        <h3>l-center</h3>
-        <div class="row l-center">
+        <h3>l-center collapse</h3>
+        <div class="row l-center collapse">
             <div class="col col-s-3 col-l-3"><div class="grid-example">col</div></div>
             <div class="col col-s-3 col-l-3"><div class="grid-example">col</div></div>
             <div class="col col-s-3 col-l-3"><div class="grid-example">col</div></div>
@@ -54,8 +54,26 @@
 
         <hr>
 
-        <h3>s-center &amp; l-center</h3>
-        <div class="row s-center l-center">
+        <h3>s-center &amp; l-center &amp; collapse</h3>
+        <div class="row s-center l-center collapse">
+            <div class="col col-s-3 col-m-3 col-l-3"><div class="grid-example">col</div></div>
+            <div class="col col-s-3 col-m-3 col-l-3"><div class="grid-example">col</div></div>
+            <div class="col col-s-3 col-m-3 col-l-3"><div class="grid-example">col</div></div>
+        </div>
+
+        <hr>
+
+        <h3>m-center collapse m-uncollapse</h3>
+        <div class="row m-center collapse m-uncollapse">
+            <div class="col col-s-3 col-m-3 col-l-3"><div class="grid-example">col</div></div>
+            <div class="col col-s-3 col-m-3 col-l-3"><div class="grid-example">col</div></div>
+            <div class="col col-s-3 col-m-3 col-l-3"><div class="grid-example">col</div></div>
+        </div>
+
+        <hr>
+
+        <h3>l-center collapse l-uncollapse</h3>
+        <div class="row l-center collapse l-uncollapse">
             <div class="col col-s-3 col-m-3 col-l-3"><div class="grid-example">col</div></div>
             <div class="col col-s-3 col-m-3 col-l-3"><div class="grid-example">col</div></div>
             <div class="col col-s-3 col-m-3 col-l-3"><div class="grid-example">col</div></div>
