--- a/test/test_nested.html
+++ b/test/test_nested.html
@@ -52,12 +52,12 @@
                 </div>
                 <div class="row">
                     <div class="col col-m-6">
-                        <div class="row">
+                        <div class="row collapse">
                             <div class="col col-s-6">
                                 <div class="grid-example">col</div>
                             </div>
                             <div class="col col-s-6">
-                                <div class="row">
+                                <div class="row collapse">
                                     <div class="col col-m-6">
                                         <div class="grid-example">col</div>
                                     </div>
